[gd_scene load_steps=11 format=3 uid="uid://bp5q0ul063yp5"]

[ext_resource type="Script" uid="uid://dk5gb0ifeigp4" path="res://scripts/card/minion_card.gd" id="1_qelh8"]
[ext_resource type="Texture2D" uid="uid://cdqy0egc8h5ai" path="res://resources/images/card_base.png" id="3_c8trp"]
[ext_resource type="Texture2D" uid="uid://6bjp3vc5hu56" path="res://resources/images/cards/jaba.png" id="4_0gfe2"]
[ext_resource type="PackedScene" uid="uid://blf0d4lap6to8" path="res://scenes/cards/card_status.tscn" id="5_c8trp"]
[ext_resource type="Script" uid="uid://df5k3c863mwho" path="res://scripts/card/description_text.gd" id="5_yrohq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ruyt4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0rmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6d7je"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0u53v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qelh8"]

[node name="info_card" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(60, 180)
script = ExtResource("1_qelh8")

[node name="graphics" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 2

[node name="portrait_margin" type="MarginContainer" parent="graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="portrait_image" type="TextureRect" parent="graphics/portrait_margin"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_0gfe2")
expand_mode = 1

[node name="outline" type="TextureRect" parent="graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c8trp")
expand_mode = 1

[node name="text_box" type="Control" parent="graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_behavior_recursive = 1

[node name="cost_panel" type="Panel" parent="graphics/text_box"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
offset_left = 2.0
offset_top = 7.0
offset_right = 26.0
offset_bottom = 31.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ruyt4")

[node name="cost_text" type="RichTextLabel" parent="graphics/text_box/cost_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 9.0
offset_right = 5.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="health_panel" type="Panel" parent="graphics/text_box"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -38.0
offset_right = -2.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_n0rmn")

[node name="health" type="RichTextLabel" parent="graphics/text_box/health_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -13.0
offset_right = -7.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="damage_panel" type="Panel" parent="graphics/text_box"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -38.0
offset_right = 27.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_6d7je")

[node name="damage" type="RichTextLabel" parent="graphics/text_box/damage_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -13.0
offset_right = 6.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name_panel" type="Panel" parent="graphics/text_box"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -57.0
offset_right = -10.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0u53v")

[node name="name_text" type="RichTextLabel" parent="graphics/text_box/name_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -27.0
offset_right = 18.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6583732, 0.6583732)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description_panel" type="Panel" parent="graphics/text_box"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qelh8")

[node name="description_text" type="RichTextLabel" parent="graphics/text_box/description_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -11.0
offset_right = -1.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_yrohq")

[node name="status_container" type="VBoxContainer" parent="graphics"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 100.0
offset_bottom = 173.0
grow_horizontal = 0

[node name="status" parent="graphics/status_container" instance=ExtResource("5_c8trp")]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
